deployment/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oliverrr
  labels:
    app: oliverrr
    component: ingress
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    nginx.ingress.kubernetes.io/proxy-body-size: 5m # increases the maximum body size to 5MB from 1 MiB (for file uploads)

spec:
  ingressClassName: nginx
  rules:
    - host: dev.oliverrr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oliverrr
                port:
                  name: frontend
    - host: cms-dev.oliverrr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oliverrr
                port:
                  name: backend
  tls:
    - hosts:
        - dev.oliverrr.net
        - cms-dev.oliverrr.net
      secretName: oliverrr-tls
